<resources>
    <string name="app_name">Craps</string>
    <string name="Button">$1</string>
    <string name="Button2">$5</string>
    <string name="Button3">$10</string>
    <string name="Button4">$25</string>
    <string name="Button5">$100</string>
    <string name="Button6">$500</string>
    <string name="Button7">$1k</string>
    <string name="Button8">$10k</string>
    <string name="Button9">$25k</string>
    <string name="Button10">$50k</string>
</resources>
